--- a/projekterne.html
+++ b/projekterne.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" media="all">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bungee+Shade&family=Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css" media="all">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" async defer></script>
     <title>Nanna Nakel Fredsgaard - Portfolio</title>
 <script src="nav.js" async defer></script>
@@ -25,7 +27,7 @@
                     <li><a href="ommigg.html">Om mig</a></li>              
                 </ul>
                 <a class="logo" href="index.html">
-                    <img src="assets/img/logoport.png" alt="logo">
+                    <img src="assets/img/logopurplelogo2.png" alt="logo">
                 </a>
                 <ul class="links">
                     <li><a href="https://www.linkedin.com/in/nanna-nakel-fredsgaard-9a8469130/" target="blank">LinkedIn</a></li>
@@ -61,7 +63,7 @@
 
     
         <section>
-            <div class="cardcontainer">
+            <div class="cardcontainer cardcontainerlesstopmargin">
                 <div class="card">
                     <a href="aalborgzooo.html">
                         <p class="cardheadline">
@@ -73,32 +75,32 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="projekter.html#cpcontent">
+                    <a href="cp.html">
                         <p class="cardheadline">
                             Color Perception - Website
                         </p>
                     </a>
-                    <a href="projekter.html#cpcontent">
-                        <img class="imgsize" src="assets/img/cpimg.jpg">
+                    <a href="cp.html">
+                        <img class="imgsize" src="assets/img/cpbillede.png">
                     </a>
                 </div>
                 <div class="card">
-                    <a href="projekter.html#smcontent">
+                    <a href="svale.html">
                         <p class="cardheadline">
                             Svalegaarden Mest - Website
                         </p>
                     </a>
-                    <a href="projekter.html#smcontent">
+                    <a href="svale.html">
                         <img class="imgsize" src="assets/img/svaleprojekt.png">
                     </a>
                 </div>
                 <div class="card">
-                    <a href="projekter.html#mfcontent">
+                    <a href="bender.html">
                         <p class="cardheadline">
                             Ungdomsringens Musikfestival - Website
                         </p>
                     </a>
-                    <a href="projekter.html#mfcontent"> 
+                    <a href="bender.html"> 
                         <img src="assets/img/mf.png">
                     </a>
                 </div>
