--- a/ommigg.html
+++ b/ommigg.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" media="all">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bungee+Shade&family=Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css" media="all">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" async defer></script>
     <title>Nanna Nakel Fredsgaard - Portfolio</title>
 <script src="nav.js" async defer></script>
@@ -20,12 +22,20 @@
             <div class="headergrid">
 
                 <ul class="navigation">
-                    <li><a href="projekterne.html">Projekter</a></li>
+                    <li class="dropdown">
+                        <a class="dropbtn" href="projekterne.html">Projekterne</a>
+                        <div class="dropdown-content">
+                        <a href="aalborgzooo.html">Aalborg Zoo</a>
+                        <a href="svale.html">Svalegaarden Mest</a>
+                        <a href="cp.html">Color Perception</a>
+                        <a href="bender.html">Bender Tærter</a>
+                        </div>
+                    </li>
                     <li class="purpleslash">/</li>
                     <li><a href="ommigg.html">Om mig</a></li>              
                 </ul>
                 <a class="logo" href="index.html">
-                    <img src="assets/img/logoport.png" alt="logo">
+                    <img src="assets/img/logopurplelogo2.png" alt="logo">
                 </a>
                 <ul class="links">
                     <li><a href="https://www.linkedin.com/in/nanna-nakel-fredsgaard-9a8469130/" target="blank">LinkedIn</a></li>
@@ -111,3 +121,37 @@
         </div>
 
     </section>
+    <div>
+        <p class="cvtext">Vil du se, hvad jeg har af tidligere erfaring så download mit CV her</p>
+        <div class="buttoncontainer">
+        <button class="buttonnomargin" onclick="location.href='ommig.html'" type="button">
+            <a href="PortfolioCV.pdf" download="CVNannaFredsgaard">DOWNLOAD CV</a>
+        </button>
+        </div>
+    </div>
+
+    <section>
+        <div class="ommigkontaktcontainer">
+            <div class="ommigkontakttextcontainer">
+                <h3 class="ommigkontaktoverskrift">Har du lyst til at arbejde sammen med mig?</h3>
+                <p class="ommigkontakttext">
+                    
+                    Nu ved du lidt om, hvem jeg er samt hvad jeg kan, 
+                    men har du lyst til at vide endnu mere og måske arbejde sammen i et praktikforløb, 
+                    så tøv ikke med at række ud! Jeg er altid klar på en snak og en kop kaffe. 
+                    Du skal være velkommen til at kontake mig på min mail eller telefonnummer
+                    <br><a href="mailto:nannafredsgaard@hotmail.com">nannafredsgaard@hotmail.com</a> <br> 
+                    +45 42439541 <br>
+                    Og ellers så forbind med mig på LinkedIn -<br>
+                    Jeg ser frem til at høre fra dig! 
+                
+                </p>
+            </div>
+            <div class="ommigimagecontainer">
+                <img class="ommignederstbillede" src="assets/img/pimg.png" alt="mig">
+            </div>
+
+        </div>
+    </section>
+    </body>
+    </html>
