--- a/cp.html
+++ b/cp.html
@@ -120,6 +120,15 @@
             </section>
       
     </main>
+    <footer>
+        <div class="copyright">
+            <img src="assets/img/copyright.png" alt="copyrighticon">
+            <p>Nanna Nakel Fredsgaard 2020</p>
+        </div>
+            <a id="bottom" href="#top">   
+                <img  src="assets/img/pil.png" alt="pil">
+            </a> 
+    </footer>
 
 </body>
 </html>
