--- a/ommigg.html
+++ b/ommigg.html
@@ -49,6 +49,7 @@
             <hr style="height:1px; width: 96%; color: mediumpurple; background-color:mediumpurple;"> 
     </div>-->
     </header>
+    <main>
 
     <section class="ommigsection">
 
@@ -153,5 +154,15 @@
 
         </div>
     </section>
-    </body>
-    </html>
+    </main>
+<footer>
+        <div class="copyright">
+            <img src="assets/img/copyright.png" alt="copyrighticon">
+            <p>Nanna Nakel Fredsgaard 2020</p>
+        </div>
+            <a id="bottom" href="#top">   
+                <img  src="assets/img/pil.png" alt="pil">
+            </a> 
+</footer>
+</body>
+</html>
