--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section id="sectionone">
         <div class="hellocontainer">
             <div>
-                <p id="typing" class="hello"></p>
+                <h1 id="typing" class="hello"></h1>
                 <div class="fadedboxpurple"></div>
             </div>
             <p class="welcometext">
@@ -80,7 +80,7 @@
 
     <section>
         <div class="projektcontainer">
-            <p class="projekter">PROJEKTER</p>
+            <h1 class="projekter">PROJEKTER</h1>
             <div class="fadedboxpurpletwo"></div>
         </div>
     </section>
@@ -89,9 +89,9 @@
         <div class="cardcontainer">
             <div class="card">
                 <a href="aalborgzooo.html">
-                    <p class="cardheadline">
+                    <h2 class="cardheadline">
                         Aalborg Zoo - Interaktiv video
-                    </p>
+                    </h2>
                 </a>
                 <a href="aalborgzooo.html">
                     <img src="assets/img/zoo.png">
@@ -99,9 +99,9 @@
             </div>
             <div class="card">
                 <a href="cp.html">
-                    <p class="cardheadline">
+                    <h2 class="cardheadline">
                         Color Perception - Website
-                    </p>
+                    </h2>
                 </a>
                 <a href="cp.html">
                     <img class="imgsize" src="assets/img/cpbillede.png">
@@ -109,9 +109,9 @@
             </div>
             <div class="card">
                 <a href="svale.html">
-                    <p class="cardheadline">
+                    <h2 class="cardheadline">
                         Svalegaarden Mest - Website
-                    </p>
+                    </h2>
                 </a>
                 <a href="svale.html">
                     <img class="imgsize" src="assets/img/svaleprojekt.png">
@@ -119,9 +119,9 @@
             </div>
             <div class="card">
                 <a href="bender.html">
-                    <p class="cardheadline">
+                    <h2 class="cardheadline">
                         Ungdomsringens Musikfestival - Website
-                    </p>
+                    </h2>
                 </a>
                 <a href="bender.html"> 
                     <img src="assets/img/mf.png">
