--- a/ommigg.html
+++ b/ommigg.html
@@ -55,7 +55,7 @@
 
         <div class="extrabgcolor"></div>
         <img class="ommigbillede" src="assets/img/pimg.png" alt="ommigbillede">
-        <h1>LÆR MIG LIDT BEDRE AT KENDE</h1>
+        <h1 class="lær">LÆR MIG LIDT BEDRE AT KENDE</h1>
         <p class="ommigtext">Jeg hedder Nanna Nakel Fredsgaard, og jeg er født og opvokset i muslingebyen Løgstør. 
             Jeg er multimediedesigner, og det betyder, at jeg kan lidt af hvert. 
             Lige siden jeg var barn, har jeg været interesseret i, 
