--- a/projekterne.html
+++ b/projekterne.html
@@ -52,10 +52,9 @@
         <section>
             <div class="projekterinfocontainer"> 
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non dolore, deleniti totam, quam nihil id sunt 
-                    ratione animi cum autem fugit quia doloribus dolorem impedit, ipsam dolor velit nesciunt quaerat!
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non dolore, deleniti totam, quam nihil id sunt 
-                    ratione animi cum autem fugit quia doloribus dolorem impedit, ipsam dolor velit nesciunt quaerat!
+                    I finder her en oversigt over de projekter jeg har været med til at arbejde på. Dette spænder fra redesign af 
+                    allerede eksisterende websites, udvikling af helt nyt website, promotional interaktive videoer og designforslag til 
+                    mulige kunder. Hvis der er noget I synes ser spændende ud, så klik ind og læs mere om projektet. 
                 </p>
             </div>
         </section>
