--- a/ommigg.html
+++ b/ommigg.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Professional Portfolio for Nanna Nakel Fredsgaard">
+    <meta name="description" content="Professional Portfolio for Nanna Nakel Fredsgaard - multimediedesigner">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet"> 
-    <link rel="icon" href="assets/img/icon.png">
+    <link rel="icon" href="assets/img/fanelogo.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" media="all">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bungee+Shade&family=Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css" media="all">
@@ -23,7 +23,7 @@
 
                 <ul class="navigation">
                     <li class="dropdown">
-                        <a class="dropbtn" href="projekterne.html">Projekterne</a>
+                        <a class="dropbtn" href="projekterne.html">Projekter</a>
                         <div class="dropdown-content">
                         <a href="aalborgzooo.html">Aalborg Zoo</a>
                         <a href="svale.html">Svalegaarden Mest</a>
@@ -45,9 +45,7 @@
         
             </div>
         </nav>  
-    <!--<div>
-            <hr style="height:1px; width: 96%; color: mediumpurple; background-color:mediumpurple;"> 
-    </div>-->
+
     </header>
     <main>
 
@@ -138,7 +136,7 @@
                 <p class="ommigkontakttext">
                     
                     Nu ved du lidt om, hvem jeg er samt hvad jeg kan, 
-                    men har du lyst til at vide endnu mere og måske arbejde sammen i et praktikforløb, 
+                    men har du lyst til at vide endnu mere og måske arbejde sammen, 
                     så tøv ikke med at række ud! Jeg er altid klar på en snak og en kop kaffe. 
                     Du skal være velkommen til at kontake mig på min mail eller telefonnummer
                     <br><a href="mailto:nannafredsgaard@hotmail.com">nannafredsgaard@hotmail.com</a> <br> 
@@ -149,7 +147,7 @@
                 </p>
             </div>
             <div class="ommigimagecontainer">
-                <img class="ommignederstbillede" src="assets/img/pimg.png" alt="mig">
+                <img class="ommignederstbillede shake" src="assets/img/phone.png" alt="mig">
             </div>
 
         </div>
