--- a/projekterne.html
+++ b/projekterne.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Professional Portfolio for Nanna Nakel Fredsgaard">
+    <meta name="description" content="Professional Portfolio for Nanna Nakel Fredsgaard - multimediedesigner">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet"> 
-    <link rel="icon" href="assets/img/icon.png">
+    <link rel="icon" href="assets/img/fanelogo.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" media="all">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Bungee+Shade&family=Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css" media="all">
@@ -22,7 +22,15 @@
             <div class="headergrid">
 
                 <ul class="navigation">
-                    <li><a href="projekterne.html">Projekter</a></li>
+                    <li class="dropdown">
+                        <a class="dropbtn" href="projekterne.html">Projekter</a>
+                        <div class="dropdown-content">
+                        <a href="aalborgzooo.html">Aalborg Zoo</a>
+                        <a href="svale.html">Svalegaarden Mest</a>
+                        <a href="cp.html">Color Perception</a>
+                        <a href="bender.html">Bender Tærter</a>
+                        </div>
+                    </li>
                     <li class="purpleslash">/</li>
                     <li><a href="ommigg.html">Om mig</a></li>              
                 </ul>
@@ -37,14 +45,12 @@
         
             </div>
         </nav>  
-    <!--<div>
-            <hr style="height:1px; width: 96%; color: mediumpurple; background-color:mediumpurple;"> 
-    </div>-->
+
     </header>
     <main>
         <section>
             <div class="projektcontainer">
-                <p class="projekter">PROJEKTER</p>
+                <h1 class="projekter">PROJEKTER</h1>
                 <div class="fadedboxpurpletwo"></div>
             </div>
         </section>
@@ -65,39 +71,40 @@
             <div class="cardcontainer cardcontainerlesstopmargin">
                 <div class="card">
                     <a href="aalborgzooo.html">
-                        <p class="cardheadline">
+                        <h2 class="cardheadline">
                             Aalborg Zoo - Interaktiv video
-                        </p>
+                        </h2>
                     </a>
                     <a href="aalborgzooo.html">
                         <img src="assets/img/zoo.png">
                     </a>
                 </div>
                 <div class="card">
-                    <a href="cp.html">
-                        <p class="cardheadline">
-                            Color Perception - Website
-                        </p>
-                    </a>
-                    <a href="cp.html">
-                        <img class="imgsize" src="assets/img/cpbillede.png">
-                    </a>
-                </div>
-                <div class="card">
                     <a href="svale.html">
-                        <p class="cardheadline">
+                        <h2 class="cardheadline">
                             Svalegaarden Mest - Website
-                        </p>
+                        </h2>
                     </a>
                     <a href="svale.html">
                         <img class="imgsize" src="assets/img/svaleprojekt.png">
                     </a>
                 </div>
                 <div class="card">
+                    <a href="cp.html">
+                        <h2 class="cardheadline">
+                            Color Perception - Website
+                        </h2>
+                    </a>
+                    <a href="cp.html">
+                        <img class="imgsize" src="assets/img/cpbillede.png">
+                    </a>
+                </div>
+                
+                <div class="card">
                     <a href="bender.html">
-                        <p class="cardheadline">
+                        <h2 class="cardheadline">
                             Ungdomsringens Musikfestival - Website
-                        </p>
+                        </h2>
                     </a>
                     <a href="bender.html"> 
                         <img src="assets/img/mf.png">
